--- a/menu/css/style.css
+++ b/menu/css/style.css
@@ -1,13 +1,41 @@
 body{
-    background-image: url(../img/fondoMenu.png);
+    background-image: url(../img/menu.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    position: relative;
 }
 .boton{
-    background-color: #2f355f;
-    border-radius: 20px;
-    width: 70px;
-    height: 70px;
+    background-color: #3f3841;
+    border-radius: 100%;
+    width: 60px;
+    height: 60px ;
     border: none;
+}
+.card-usuario{
+    background-color: #231f24;
+    position: relative;
+    left: 18px;
+    top:-50px;
+    border-radius: 10px;
+    color: aliceblue;
+    width: 250px;
+    height: 200px;
+    overflow-y: auto;
+    scrollbar-color: #231f24 #3f3841;
+}
+.tablaPosicion{
+    background-color: #3f3841;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px ;
+    border: none;
+}
+.juegos{
+    margin-left: 50px;
+    width: 200px;
+    height: 200px;
+    transition: 600ms;
+}
+.juegos:hover{
+    transform: scale(1.1);
 }
