--- a/PROYECTO-MJC memoorize/menu-niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/menu-niveles/css/style.css
@@ -49,7 +49,7 @@ body{
         text-shadow: 1px 1px 1px rgb(244, 244, 244);
         text-align: center;
         margin-top: 15%;
-        font-size: 15px;
+        font-size: px;
         font-family: serif;
     
     }
