--- a/PROYECTO-MJC memoorize/dificultad-rompe/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../img/fondoNumero.jpeg');
+    background-image: url('../img/fondo.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -10,7 +10,7 @@ body{
     width: 280px;
     height: 280px;
     position: relative;
-    left: 38%;
+    left: 40%;
     margin-top: 3%;
     margin-bottom: 3%;
 }
@@ -18,7 +18,7 @@ body{
 .botones{
     background-image: linear-gradient(220deg, #ffe150 0, #ffd250 10%, #ffc252 20%, #ffb053 30%, #ff9d53 40%, #f28953 50%, #e07752 60%, #cf6751 70%, #bf5a51 80%, #b25052 90%, #a74853 100%);
     margin: 55px;
-    width: 180px;
+    width: 250px;
     height: 60px;
     border-radius: 10px;
     border: none;
@@ -26,10 +26,11 @@ body{
 }
 
 .letra{
+    
     text-shadow: 1px 1px 1px rgb(244, 244, 244);
     text-align: center;
-    margin-top: 6px;
-    font-size: 15px;
+    margin-top: 4px;
+    font-size: 25px;
     font-family: serif;
 
 
@@ -37,7 +38,7 @@ body{
 
 .container{
     position: relative;
-    left: 120px;
+    left: 105px;
 
     
 }
@@ -48,7 +49,7 @@ body{
 }
 
 .animacion:hover{
-    transform: scale(2);
+    transform: scale(1.5);
 }
 
 /*otro*/
