--- a/PROYECTO-MJC memoorize/login/css/style.css
+++ b/PROYECTO-MJC memoorize/login/css/style.css
@@ -41,7 +41,20 @@ body{
     width: 30%;
     height: auto;
     border-radius: 10px;
-    background-color: rgba(240, 248, 255, 0.337);
+    background-color: rgba(237, 178, 134, 0.337);
+    transition: 200ms;
+    margin: auto;
+}
+#formulario:hover{
+    transform: none;
+    box-shadow: 0px 0px 40px rgb(0, 0, 0);
+}
+.logoForm{
+    margin: auto;
+}
+.logoForm img{
+    width: 98%;
+    height: 98%;
 }
 
 /*iconoInput*/
