--- a/dificultad/menuNiveles/explicarJuego/css/estilos.css
+++ b/dificultad/menuNiveles/explicarJuego/css/estilos.css
@@ -6,29 +6,29 @@ body {
     background-position: center;
   }
   
+  .logo img{
+    width: 240px;
+    height: 240px;
+    position: relative;
+    left: 950px;
+    margin-top: 3%;
+    margin-bottom: 10px;
+}
+
   .container {
     display: flex;
     gap: 20px; 
-    margin: 150px auto;
-    width: 800px;
+    margin: 90px auto;
+    width: 900px;
     height: 400px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.388);
     position: relative;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
+    border-radius: 5%;
   }
-  
-  .box {
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    background-color: lightblue;
+
+  .titulo{
+    color: aqua;
     text-align: center;
-    line-height: 100px;
-    font-size: 30px;
-    cursor: not-allowed; /* Cambia a 'grab' cuando el arrastre esté habilitado */
-    border: 2px solid #000;
-    position: relative;
-    top: 0;
-    left: 0;
   }
