--- a/PROYECTO-MJC memoorize/login/recuperar/recuperar.css
+++ b/PROYECTO-MJC memoorize/login/recuperar/recuperar.css
@@ -17,7 +17,7 @@
 	 min-height: 80vh;
 	 align-items: center;
 	 justify-content: center;
-	background-image: url(../images/ola.jpg);
+	background-image: url(images/ola.jpg);
  
 	 font-family: sans-serif;
  }
@@ -39,7 +39,7 @@
 top: -350px;
 width: 600px;
 height: 600px;
-background-image: url(../images/logo2.png);
+background-image: url(images/logo2.png);
 
  }
 
@@ -56,7 +56,7 @@ background-image: url(../images/logo2.png);
  	right: 100px;
  	width: 300px;
  	height: 300px;
- 	background-image: url(../images/logo2.png);
+ 	background-image: url(images/logo2.png);
  }
 
  .box{
@@ -210,7 +210,7 @@ background-image: url(../images/logo2.png);
 }
 
 .form .inputBox input[type="submit"]:hover{
-	background: #eb80bf;
+	background: #cb8d1a;
 	color: #fff;
 
 }
@@ -223,5 +223,4 @@ background-image: url(../images/logo2.png);
 color: #fff;
 font-weight: 600;
 }
-
 
