--- a/PROYECTO-MJC memoorize/style.css
+++ b/PROYECTO-MJC memoorize/style.css
@@ -14,7 +14,7 @@ body{
 }
 .btnText{
     font-family: 'Times New Roman', Times, serif;
-    color: black;
+    color: rgb(255, 255, 255);
     padding-top: 7px;
     
 }
