--- a/PROYECTO-MJC memoorize/login/resgistrate/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/style.css
@@ -1,291 +1,77 @@
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f8f9fa;
-    margin: 0;
-    
-}
-.round-button{
-    position: relative;
-    left: 50%;
-    display: flex ;
-
-
+body{
+    background-image: url(../../img/fondo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-
-.containe {
-    text-align: center;
-   
-    
-}
-
-.round-button {
-   
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+/*sonido*/
+#playButton {
     font-size: 20px;
-    transition: background-color 0.3s, transform 0.3s;
+    padding: 10px 20px;
+    background-color: rgba(73, 20, 20, 0);
+    border: none;
+    cursor: pointer;
+    transition: 1s;
 }
-
-.round-button:hover {
-    background-color: #0056b3;
+.imgSonido{
+    width: 60px;
+    height: 60px;
+}
+#playButton:hover {
     transform: scale(1.1);
 }
 
-.round-button:focus {
-    outline: none;
-    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
+/*Formulario*/
+#formulario{
+    width: 25%;
+    height: auto;
+    border-radius: 10px;
+    background-color: rgba(168, 168, 168, 0.096);
+    transition: 200ms;
+    margin: auto;
+    border: 1px solid rgb(155, 155, 155);
+    position: relative;
+    top: -40px;
+}
+#formulario:hover{
+    transform: none;
+    box-shadow: 0px 0px 40px rgb(0, 0, 0);
 }
 
-
-.page{
-    
-    width:350px;
-    
-    border: #fff;
-    border-radius: 100px;
-    padding-bottom: 15px;
-    }
-
-.btn{
-    width:100px ;
-    height:30px ;
-}
-body{
-    margin:  0;
-    padding: 0;
-    display: flex;
-    min-height: 80vh;
-    align-items: center;
-    justify-content: center;
-   background-image: url(images/bb.jpg);
-
-    font-family: sans-serif;
-}
-.container{
-    text-align: center;
-   border:2px solid rgb(71, 54, 54);
-   border-radius:22px;
+/*iconoInput*/
+.inputIcon{
+    max-width: 420px;
+    position: relative;
+    margin: auto;
 }
 
-
-.logo{
-  display:block;
-margin: 50px auto 40px;
-
-
-
-}
-form{
- width: 75%;
-display: flex;
-flex-direction: column;
-position: relative;
-left: 50%;
-transform: translateX(-50%);   
-}
-form input {
-margin-bottom: 5px;
-border:1px solid linear-gradient(90deg, rgba(233,195,37,1) 39%, rgba(255,166,0,1) 61%);
-background: linear-gradient(90deg, rgba(233,195,37,1) 39%, rgba(255,166,0,1) 61%);
-border-radius: 3px;
-outline: none;
-padding-left: 10px;
-position: relative;
-height: 35px;
-    
-}
-
-form button{    
-border: none;
-background: linear-gradient(90deg, rgba(136,17,17,1) 0%, rgba(255,21,0,1) 100%);
-padding: 8px 0;
-margin-top: 10px;
-color: #fff;
-border-radius: 7px;
-font-weight: bold;
-text-transform: capitalize;
-letter-spacing: 1px;
-outline: none;
-cursor: pointer;
-}
-form button:active{
-background:  rgb(24, 119, 242);
-transform: scaleX(0.995);  
-}
-form.option{
-color:#b6b4b4;
-margin: 70px ;
-position:relative;
-}
-form .option::before{
-position: absolute;    
-content:  '';
-width: 37%;
-height: 1px;
-background:#b6b6b6; 
-left:0%;
-top: 95%;
-transform: translateY(-50%);
-border-radius: 50px;
-
-}
-form .option::after{
-position: absolute;    
-content:  '';
-width: 37%;
-height: 2px;
-background:#b6b6b6; 
-right:0%;
-top: 95%;
-transform: translateY(-50%);
-border-radius: 50px;
-
-}
-.fblink{
-    margin-top: 30px;
-    width: 100%
-}
-.fblink span{
-    font-size: 18px;
-    color: rgb(56, 81, 133);
-    margin-right: 5px;
-    
-}
-.fblink a{
-  text-decoration: none;
-font-weight: bold;
-color: rgb(56, 81, 133);
-}
-.forget-id{
-    margin: 15px;   
-}
-.forget-id a{
-    text-decoration: none;
-    color: rgb(56, 81, 133);
-    font-size: 12px;
-    font-weight: 500;
-    
-}
-.page .singup{
-    position:relative;
-    border:1px solid #b6b6b6;
-    border-radius: 2px;
-    width: 90%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 25px;
-}
-.singup a{
-    text-decoration: none;
-    margin-left: 5px;
-    color : rgb(76, 180, 248);
-    font-weight: bold;
-    
-}
-/* styles.css */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-.login-container {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    text-align: center;
-}
-
-.login-form h2 {
-    margin-bottom: 20px;
-}
-
-.input-group {
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.input-group label {
+#icon{
+    position: absolute;
     display: block;
-    margin-bottom: 5px;
-}
-
-.input-group input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-.login-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background-color: #007BFF;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-
-.social-login p {
-    margin-bottom: 10px;
-}
-
-.social-buttons {
-    display: flex;
-    justify-content: space-around;
-}
-
-.social-button {
-    text-decoration: none;
-    color: white;
-    padding: 10px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-}
-
-.facebook {
-    background-color: #3b5998;
-    width: 9%;
-    height: 36px;
-}
-
-.twitter {
-    background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,120,0,1) 35%, rgba(231,255,0,1) 100%);
-    width: 9%;
-    height: 35px;
-}
-
-.instagram {
-    background-color: #ffffff;
-    width: 9%;
-    height: 35px;
+    bottom: .5rem;
+    right: 1rem;
     
+    user-select: none;
+    cursor: pointer;
 }
-.olaa{
-    color: #f0f0f0;
+
+#icon img{
+    width: 15px;
+    height: 15px;
+}
+input.input{    
+  padding-right: 2.5rem;
+  background-color: orange;
+  border: 1px solid black;
+  transition: 100ms;
+}
+input.input:focus{
+    background-color: orange;
+    border: 1px solid black;
+    box-shadow: 0px 0px 5px black;
+}
+input.input:hover {  
+    background-color: rgb(255, 145, 0);
+    
 }
