--- a/PROYECTO-MJC memoorize/dificultad-QuizUp/menuNiveles/explicarJuego/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-QuizUp/menuNiveles/explicarJuego/css/estilos.css
@@ -9,9 +9,10 @@ body {
   .logo img{
     width: 240px;
     height: 240px;
+    position: relative;
+    left: 950px;
+    margin-top: 3%;
     margin-bottom: 10px;
-    display: block;
-    margin: 0 auto;
 }
 
   .container {
@@ -25,7 +26,9 @@ body {
     padding: 10px;
     box-sizing: border-box;
     border-radius: 5%;
-    
   }
 
- 
+  .titulo{
+    color: aqua;
+    text-align: center;
+  }
