--- a/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/fondo.jpg);
+    background-image: url(../../../img/fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -22,9 +22,33 @@ body{
     transform: scale(1.1);
 }
 
+/*botones*/
+.btnLogin{
+    width: 200px;
+    height: 40px;
+    background-image: url(../../../img/boton.jpg);   
+    transition: 600ms;
+    margin-bottom: 3%;
+}
+.btnLogin:hover{
+    transform: scale(1.1);
+}
+
+/*logo*/
+
+.logo{
+    width: 90%;
+    position: relative;
+    left: 15%;
+    transition: 200ms;  
+}
+.logo:hover{
+    transform: scale(1.1);
+}
+
 /*Formulario*/
 #formulario{
-    width: 25%;
+    width: 28%;
     height: auto;
     border-radius: 10px;
     background-color: rgba(168, 168, 168, 0.096);
@@ -37,6 +61,14 @@ body{
 #formulario:hover{
     transform: none;
     box-shadow: 0px 0px 40px rgb(0, 0, 0);
+}
+.text{
+    color: aliceblue;
+    text-align: center;
+}
+.linea{
+    border-top: 1px solid black;
+    margin-top: 3% !important;
 }
 
 /*iconoInput*/
@@ -74,4 +106,43 @@ input.input:focus{
 input.input:hover {  
     background-color: rgb(255, 145, 0);
     
+}
+
+/*iconosRedes*/
+.logoRedes{
+    margin: auto;
+}
+.logoRedes img{
+    width: 25%;
+    height: 25%;
+    transition: 200ms;
+}
+.logoRedes img:hover{
+    transform: scale(1.2);
+}
+.facebook{
+    position: relative;
+    left: 75%;
+}
+.gitHub{
+    position: relative;
+    left: 40%;
+}
+
+/*texto*/
+.textCrear{
+    font-size: medium;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+.textCrear a{
+    color: rgb(255, 0, 0) !important; 
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif !important;
+}
+
+/*quitar link*/
+a:link, a:visited, a:active {
+    text-decoration:none;
 }
