--- a/PROYECTO-MJC memoorize/dificultad-OrderNumbers/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-OrderNumbers/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../img/fondoNumero.jpeg');
+    background-image: url('../img/fondoNumero.png');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
