--- a/PROYECTO-MJC memoorize/dificultad-OrderNumbers/menuNiveles/explicarJuego/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-OrderNumbers/menuNiveles/explicarJuego/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../../img/fondoNumero.jpeg');
+    background-image: url('../../../img/fondoNumero.png');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -26,6 +26,11 @@ body {
     box-sizing: border-box;
     border-radius: 5%;
     
+  }
+
+  .titulo{
+    text-align: center;
+    color: aqua;
   }
 
  
