--- a/PROYECTO-MJC memoorize/dificultad-OrderNumbers/menuNiveles/explicarJuego/cuadros/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-OrderNumbers/menuNiveles/explicarJuego/cuadros/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../../../img/fondoNumero.jpeg');
+    background-image: url('../../../../img/fondoNumero.png');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -26,7 +26,7 @@ body {
     text-align: center;
     line-height: 100px;
     font-size: 30px;
-    cursor: not-allowed; /* Cambia a 'grab' cuando el arrastre esté habilitado */
+    cursor: not-allowed; 
     border: 2px solid #000;
     position: relative;
     top: 0;
