--- a/PROYECTO-MJC memoorize/login/css/style.css
+++ b/PROYECTO-MJC memoorize/login/css/style.css
@@ -54,8 +54,9 @@ body{
     margin: auto;
 }
 .logoForm img{
-    width: 200px;
-    height: 200px;
+    width: 175px;
+    height: 175px;
+    margin-bottom: 2%;
     transition: 200ms;
 }
 .logoForm img:hover{
