--- a/PROYECTO-MJC memoorize/dificultad-rompe/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../img/fondo.jpg');
+    background-image: url('../img/juegoRompe.jpeg');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -92,4 +92,8 @@ body{
 
 .button-container:hover .tooltip {
     opacity: 1;
+}
+
+@media (min-width: 600px){
+   
 }
