--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/fondoMenu.jpg);
+    background-image: url(../../img/menu1.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
