--- a/PROYECTO-MJC memoorize/barra de carga/css/styles.css
+++ b/PROYECTO-MJC memoorize/barra de carga/css/styles.css
@@ -10,16 +10,20 @@ body {
     background-attachment: fixed;
 }
 
-.progress-container {
-    width: 80%;
-    background-color: #414141;
-    border-radius: 85px;
-    overflow: hidden;
-}
-
-.progress-bar {
+#loading-bar {
     width: 0;
-    height: 30px;
-    background-color: #d36408;
-    border-radius: 25px;
+    height: 20px;
+    background-color: #611111;
+    border-radius: 20px;
+    transition: width 1s ease;
+}
+#containere {
+    width: 70%;
+    height: 20px;
+    background-color: rgba(240, 248, 255, 0.637);
+    border-radius: 20px;
+}
+.center{
+    margin-top: 200px;
+
 }
