--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/menu1.jpg);
+    background-image: url(../../img/fondoMenu.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -124,4 +124,23 @@ body{
 .game-button:hover {
     transform: scale(1.2);
     border: none;
+}
+
+/*barra de carga*/
+#loading-bar {
+    width: 0;
+    height: 20px;
+    background-color: rgb(121, 33, 33);
+    border-radius: 20px;
+    transition: width 1s ease;
+}
+#containere {
+    width: 70%;
+    height: 20px;
+    background-color: rgba(240, 248, 255, 0.452);
+    border-radius: 20px;
+}
+.center{
+    margin-top: 200px;
+
 }
