--- a/PROYECTO-MJC memoorize/dificultad-rompe/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/css/estilos.css
@@ -10,14 +10,14 @@ body{
     width: 280px;
     height: 280px;
     position: relative;
-    left: 34%;
+    left: 40%;
     margin-top: 3%;
     margin-bottom: 3%;
 }
 
 .botones{
     background-image: linear-gradient(220deg, #ffe150 0, #ffd250 10%, #ffc252 20%, #ffb053 30%, #ff9d53 40%, #f28953 50%, #e07752 60%, #cf6751 70%, #bf5a51 80%, #b25052 90%, #a74853 100%);
-    margin: 45px;
+    margin: 55px;
     width: 250px;
     height: 60px;
     border-radius: 10px;
@@ -36,6 +36,12 @@ body{
 
 }
 
+.container{
+    position: relative;
+    left: 105px;
+
+    
+}
 
 .animacion{
     cursor: pointer;
@@ -86,63 +92,6 @@ body{
 
 .button-container:hover .tooltip {
     opacity: 1;
-}
-
-/*sonido*/
-#playButton {
-    font-size: 20px;
-    padding: 10px 20px;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    position: relative;
-    left: 10%;
-    top: 2%;
-}
-.imgSonido{
-    width: 70px;
-    height: 70px;
-}
-#playButton:hover {
-    transform: scale(1.1);
-}
-
-/*usuario*/
-#usuarioBtn{
-    font-size: 20px;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    position: relative;
-    left: 10%;
-    top: 2%;
-}
-.imgUsuario{
-    width: 70px;
-    height: 70px;
-}
-#usuarioBtn:hover{
-    transform: scale(1.1);
-}
-
-
-/*configuracion*/
-#configuracionBtn{
-    font-size: 20px;
-    padding: 10px 10%;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    position: relative;
-    left: 10%;
-    top: 2%;
-}
-.imgConfiguracion{
-    width: 70px;
-    height: 70px;
-}
-#configuracionBtn:hover {
-    transform: scale(1.1);
 }
 
 @media (min-width: 600px){
