--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Dificil/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Dificil/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../img/fondoNumero.png');
+    background-image: url('../../../img/juegoRompe.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
