--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Medio/css/estilos.css
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Medio/css/estilos.css
@@ -1,75 +1,144 @@
-body{
+body {
     background-image: url('../../../img/juegoRompe.jpeg');
     background-size: cover;
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: center;
-    
 }
 
-.nivel.locked {
+.nivel.locked, .nivel.unlocked {
     background-color: rgba(128, 128, 128, 0.384);
     cursor: not-allowed;
     border: 1px solid rgb(0, 0, 0);
+    margin: 10px;
+    border-radius: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100px;
     height: 100px;
-    margin: auto;
-    border-radius: 30%;
 }
 
 .nivel.unlocked {
-    
-    background-image: linear-gradient(62deg, #f06c1ff5 0%, #caa035dc 100%);   
+    background-image: linear-gradient(62deg, #f06c1ff5 0%, #caa035dc 100%);
     cursor: pointer;
-    border: 1px solid rgb(0, 0, 0);
-    margin: auto;
-    width: 100px;
-    height: 100px;
-    border-radius: 30%;
 }
 
-.container{
-    position: relative;
-
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.container-nivel{
-    width: 500px;
-    height: auto;
-    margin: auto;
-    margin-bottom: 3%;
-}
-.logo img{
-    width: 280px;
-    height: 280px;
-    position: relative;
-    left: 38%;
-    margin-top: 3%;
+.container-nivel {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 500px; /* Tamaño predeterminado para pantallas grandes */
     margin-bottom: 3%;
 }
 
-.animacion{
-    cursor: pointer;
+.logo img {
+    width: 50vh;
+    height: 50vh;
+    margin: 15% auto;
+}
+
+.animacion {
     transition: transform 0.3s;
 }
-.animacion:hover{
+
+.animacion:hover {
     transform: scale(1.2);
 }
 
-    
-    .ol-a{
-        text-shadow: 1px 1px 1px rgb(244, 244, 244);
-        text-align: center;
-        margin-top: 6px;
-        font-size: 15px;
-        font-family: serif;
-    
+.ol-a {
+    text-align: center;
+    margin-top: 6px;
+    font-size: 15px;
+    font-family: serif;
+}
+
+.o-l {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 30px;
+    font-family: serif;
+}
+
+@media (max-width: 1024px) {
+    .logo img{
+        width:30vh;
+        height: auto;
     }
-    .o-l{
-        text-shadow: 1px 1px 1px rgb(244, 244, 244);
-        text-align: center;
-        margin-top: 15px;
-        font-size: 30px;
-        font-family: serif;
-    
+    .container-nivel {
+        width: 80%; /* Ajusta el contenedor en pantallas más pequeñas */
     }
+}
+
+@media (max-width: 768px) {
+    .container-nivel {
+        width: 80%;
+    }
+    .nivel.locked, .nivel.unlocked {
+        width: 15%; /* Permite que cuatro niveles entren en una fila */
+        height: auto;
+    }
+}
+
+@media (max-width: 426px) {
+    .logo img{
+        width:30vh;
+        height: auto;
+    }
+    .container-nivel {
+        width: 100%;
+    }
+    .nivel.locked, .nivel.unlocked {
+        width: 19%; /* Sigue permitiendo cuatro niveles por fila */
+        height: auto;
+    }
+}
+
+@media (max-width: 376px) {
+    
+    .logo img{
+        width:20vh;
+        height:auto;
+    }
+    .container-nivel {
+        width: 100%;
+    }
+    .nivel.locked, .nivel.unlocked {
+        width: 19%; /* Ajuste de tamaño para pantallas más pequeñas */
+        height: auto;
+    }
+    .o-l {
+        font-size: 16px; /* Tamaño más pequeño del número */
+    }
+    .ol-a {
+        font-size: 10px; /* Tamaño más pequeño de "LEVEL" */
+    }
+}
+
+@media (max-width: 321px) {
+    
+    .logo img{
+        width:20vh;
+        height:auto;
+    }
+    .container-nivel {
+        width: 100%;
+    } 
+    .nivel.locked, .nivel.unlocked {
+        width: 18%; /* Ajuste de tamaño para pantallas más pequeñas */
+        height: auto;
+    }
+    .o-l {
+        font-size: 12px; /* Tamaño más pequeño del número */
+        margin-top: 5px;
+    }
+    .ol-a {
+        font-size: 12px; /* Tamaño más pequeño de "LEVEL" */
+        margin-top: 3px;
+    }
+}
