--- a/PROYECTO-MJC memoorize/css/style.css
+++ b/PROYECTO-MJC memoorize/css/style.css
@@ -1,19 +1,84 @@
 body{
-    background-image: url(../img/fondo.jpg);
+    background-image: url(../img/view-underwater-sea-life-cartoon-style.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
 }
 
 /*jugar*/
 
+.burbuja {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('../img/realistic-style-soap-bubbles-background.png') repeat;
+    opacity: 0.8;
+    animation: moveStars 95s linear infinite;
+    animation: pulse 6s infinite;
+}
+
+@keyframes moveStars {
+    
+    from { background-position: 0 0; }
+    to { background-position: -1000px 0; }
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+/*jugar*/
+.bubbles {
+    position: absolute;
+    width: 115%;
+    bottom: 4px;
+    right: 0px;
+    height: 115%;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.bubble {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 190%;
+    opacity: 80;
+    pointer-events: none;
+}
+
+@keyframes rise {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+}
+
 .btnJugar{
     width: 250px;
     height: 60px;
-    background-image: url(../img/boton.jpg);   
+    background-image: url(../img/4167804.jpg);   
     transition: 600ms;
+    bottom: 40px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: none; 
+    background-color: transparent; 
     position: relative;
-    right: 6vh;
+    right: 4vh;
 }
 .btnText{
     font-family: 'Times New Roman', Times, serif;
@@ -24,13 +89,20 @@ body{
 .btnJugar:hover{
     transform: scale(1.1);
 }
-
 /*logo*/
 .imgLogo{
     position: relative;
-    right: 6vh;
+    right: 3vh;
+    bottom: 90px;
     transition: 500ms;
+    animation: moveLogoVertical 2s infinite alternate ease-in-out;
+    margin-bottom: 20px;
 }
+@keyframes moveLogoVertical {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(25px); }
+}
+
 .imgLogo:hover{
     transform: scale(1.1);
 }
@@ -38,6 +110,8 @@ body{
 /*sonido*/
 #playButton {
     font-size: 20px;
+    z-index: 999; 
+    position: relative; 
     padding: 10px 20px;
     background-color: rgba(73, 20, 20, 0);
     border: none;
