--- a/PROYECTO-MJC memoorize/login/css/style.css
+++ b/PROYECTO-MJC memoorize/login/css/style.css
@@ -102,9 +102,6 @@ input.input:hover {
     color: aliceblue;
     text-align: center;
 }
-.linea{
-    border-top: 1px solid black;
-}
 
 /*iconosRedes*/
 .logoRedes{
@@ -157,4 +154,74 @@ input.input:hover {
 /*quitar link*/
 a:link, a:visited, a:active {
     text-decoration:none;
+}
+
+@media(width: 320px){
+    body{
+        background-size: 100% 111%;
+    }
+    /*Formulario*/
+    #formulario{
+        width: 85%;
+        height: 85vh;
+        position: relative;
+        top: 1vh;
+    }
+    input.input{    
+        height: 5vh;
+    }
+    .imgSonido{
+        width: 40px;
+        height: 40px;
+    }
+    #playButton {
+        padding: 1vh 2vh;
+    }
+    .logoForm img{
+        width: 28vh;
+        height: 28vh;
+        margin-bottom: 2%;
+        transition: 200ms;
+    }
+    .logoRedes img{
+        width: 5vh;
+        height: 5vh;
+        transition: 200ms;
+    }
+    .textCrear{
+        font-size: 2vh;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+    }
+    .textCrear a{
+        color: rgb(255, 0, 0) !important; 
+        font-size: 15px;
+        font-family: Arial, Helvetica, sans-serif !important;
+    }
+    
+    .textOlvide{
+        font-size: 2vh;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        
+    }
+    .textOlvide a{
+        color: rgb(161, 123, 7) !important; 
+        font-size: 15px;
+        
+    }
+    .text{
+        color: aliceblue;
+        text-align: center;
+        font-size: 2vh;
+    }
+    .btnLogin{
+        width: 25vh;
+        height: 6vh;
+        background-image: url(../../img/boton.jpg);   
+        transition: 600ms;
+        margin-bottom: 3%;
+    }
 }
