--- a/PROYECTO-MJC memoorize/login/css/style.css
+++ b/PROYECTO-MJC memoorize/login/css/style.css
@@ -1,36 +1,20 @@
 body{
-    background-image: url(../../img/fondo.jpg);
+    background-image: url(../../img/view-underwater-sea-life-cartoon-style.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
 }
 
 /*botones*/
 .btnLogin{
     width: 200px;
     height: 40px;
-    background-image: url(../../img/boton.jpg);   
+    background-color: rgb(10, 97, 82) !important;  
     transition: 600ms;
     margin-bottom: 3%;
 }
 .btnLogin:hover{
-    transform: scale(1.1);
-}
-
-/*sonido*/
-#playButton {
-    font-size: 20px;
-    padding: 10px 20px;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    transition: 1s;
-}
-.imgSonido{
-    width: 60px;
-    height: 60px;
-}
-#playButton:hover {
     transform: scale(1.1);
 }
 
@@ -39,12 +23,12 @@ body{
     width: 28%;
     height: auto;
     border-radius: 10px;
-    background-color: rgba(168, 168, 168, 0.096);
+    background-image: url(../../img/login.jpg);
+    opacity: 2;
     transition: 200ms;
     margin: auto;
-    border: 1px solid rgb(155, 155, 155);
     position: relative;
-    top: -40px;
+    bottom: 10vh;
 }
 #formulario:hover{
     transform: none;
@@ -85,17 +69,17 @@ body{
 }
 input.input{    
   padding-right: 2.5rem;
-  background-color: orange;
+  background-color: rgb(141, 212, 188);
   border: 1px solid black;
   transition: 100ms;
 }
 input.input:focus{
-    background-color: orange;
+    background-color: rgb(141, 212, 188);
     border: 1px solid black;
     box-shadow: 0px 0px 5px black;
 }
 input.input:hover {  
-    background-color: rgb(255, 145, 0);
+    background-color: rgb(112, 189, 163);
     
 }
 .text{
@@ -132,7 +116,7 @@ input.input:hover {
     text-align: center;
 }
 .textCrear a{
-    color: rgb(255, 0, 0) !important; 
+    color: rgb(228, 127, 127) !important; 
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif !important;
 }
@@ -145,7 +129,7 @@ input.input:hover {
     
 }
 .textOlvide a{
-    color: rgb(161, 123, 7) !important; 
+    color: rgb(81, 179, 81) !important; 
     font-size: larger;
     
 }
@@ -223,5 +207,38 @@ a:link, a:visited, a:active {
         background-image: url(../../img/boton.jpg);   
         transition: 600ms;
         margin-bottom: 3%;
+    }
+}
+
+/*burbujas*/
+
+.burbuja {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('../../img/realistic-style-soap-bubbles-background.png') repeat;
+    opacity: 0.8;
+    animation: moveStars 95s linear infinite;
+    animation: pulse 6s infinite;
+}
+
+@keyframes moveStars {
+    
+    from { background-position: 0 0; }
+    to { background-position: -1000px 0; }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
     }
 }
