--- a/PROYECTO-MJC memoorize/login/recuperar/css/style.css
+++ b/PROYECTO-MJC memoorize/login/recuperar/css/style.css
@@ -10,7 +10,7 @@ body{
 .btnLogin{
     width: 200px;
     height: 40px;
-    background-color: rgb(10, 97, 82) !important;  
+    background-color: rgb(34, 34, 126) !important;  
     transition: 600ms;
     margin-bottom: 3%;
 }
@@ -20,15 +20,19 @@ body{
 
 /*Formulario*/
 #formulario{
-    width: 28%;
+    width: 30%;
     height: auto;
-    border-radius: 10px;
-    background-image: url(../../../img/login.jpg);
+    top: 60px;
+    border-radius: 30px;
+    background-image: url(../../../img/deco.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; 
     opacity: 2;
     transition: 200ms;
     margin: auto;
     position: relative;
-    top: 8vh;
+    bottom: 0vh;
 }
 #formulario:hover{
     transform: none;
@@ -74,22 +78,32 @@ body{
 }
 input.input{    
   padding-right: 2.5rem;
-  background-color: rgb(141, 212, 188);
+  background-color: rgba(255, 255, 255, 0.397);
   border: 1px solid black;
   transition: 100ms;
 }
 input.input:focus{
-    background-color: rgb(141, 212, 188);
+    background-color: rgb(255, 255, 255);
     border: 1px solid black;
     box-shadow: 0px 0px 5px black;
 }
 input.input:hover {  
-    background-color: rgb(112, 189, 163);
+    background-color: rgb(255, 255, 255);
     
 }
 .text{
     color: aliceblue;
     text-align: center;
+}
+.text2{
+    color: aliceblue;
+    text-align: center;
+    font-size: 30px;
+}
+.text1{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 18px;
 }
 
 /*iconosRedes*/
@@ -134,7 +148,7 @@ input.input:hover {
     
 }
 .textOlvide a{
-    color: rgb(81, 179, 81) !important; 
+    color: rgb(255, 255, 255) !important; 
     font-size: larger;
     
 }
