--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -144,11 +144,40 @@ body{
     border: 5px solid #7169ff00; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
+.game-container {
+    position: relative;
+    display: inline-block;
+}
+
+.game-description {
+    display: none;
+    position: absolute;
+    top: 120px;
+    left: 10%;
+    width: 200px;
+    background-image: url('../../menu/img/botonw.png');
+    background-color: #ffffff00;
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: center;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: left;
+    z-index: 10;
+    font-size: 1.1em;
+    line-height: 1.4em;
+}
 
 .game-button:hover {
     transform: scale(1.2);
     border: none;
 }
+.game-logo:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+
 .burbuja {
     position: absolute;
     width: 100%;
