--- a/PROYECTO-MJC memoorize/login/css/style.css
+++ b/PROYECTO-MJC memoorize/login/css/style.css
@@ -23,7 +23,7 @@ body{
     width: 30%;
     height: auto;
     border-radius: 30px;
-    background-image: url(../../img/login.jpeg);
+    background-color: rgba(240, 248, 255, 0.541);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
@@ -96,7 +96,7 @@ input.input:hover {
     font-size: 18px;
 }
 .text2{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-align: center;
     font-size: 28px;
 }
@@ -143,26 +143,26 @@ input.input:hover {
 /*texto*/
 .textCrear{
     font-size: 1.3em;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 .textCrear a{
-    color: rgb(0, 0, 0) !important; 
+    color: rgb(255, 255, 255) !important; 
     font-size: 22px;
     font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .textOlvide{
     font-size: medium;
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     
 }
 .textOlvide a{
     color: rgb(0, 0, 0) !important; 
-    font-size: 1.4em;
+    font-size: 1.3em;
     
 }
 
