--- a/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
@@ -89,7 +89,7 @@ body{
     width: 30%;
     height: auto;
     border-radius: 30px;
-    background-image: url(../../../img/deco.jpg);
+    background-color: rgba(240, 248, 255, 0.508);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
@@ -103,12 +103,12 @@ body{
     box-shadow: 0px 0px 40px rgb(0, 0, 0);
 }
 .text{
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     text-align: center;
 }
 .text2{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-align: center;
     font-size: 30px;
 }
