--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -125,10 +125,10 @@ body{
 }
 #titulo-juegos {
     font-family: 'Montserrat', sans-serif;
-    font-size: 3.0em;
+    font-size: 4.0em;
     color: #ffffff;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
-    margin-bottom: 10px;
+    margin-bottom: -50px;
     position: relative;
     top: 100px;
     text-align: center;
@@ -148,6 +148,15 @@ body{
     display: inline-block;
     
 }
+.nombre-icono {
+    display: none; 
+    font-size: 1.0em; 
+    color: #ffffff; 
+    margin-top: 0px; 
+    left: 0px;
+    position: relative;
+    text-align: center; 
+}
 
 .game-description {
     display: none;
@@ -156,17 +165,18 @@ body{
     left: 10%;
     width: 200px;
     background-image: url('../../menu/img/botonw.png');
-    background-color: #ffffff00;
+    background-color: rgba(255, 255, 255, 0); 
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
-    color: white;
+    color: rgb(0, 0, 0); 
     padding: 10px;
     border-radius: 10px;
     text-align: left;
     z-index: 10;
-    font-size: 1.1em;
-    line-height: 1.4em;
+    font-size: 1.3em; 
+    line-height: 1.6em; 
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.7);
 }
 
 .game-button:hover {
