--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -172,11 +172,10 @@ body{
     color: rgb(0, 0, 0); 
     padding: 10px;
     border-radius: 10px;
-    text-align: left;
+    text-align: center;
     z-index: 10;
     font-size: 1.3em; 
     line-height: 1.6em; 
-    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.7);
 }
 
 .game-button:hover {
